# demo-cli

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: test-python-versions.yml  testing-python-version.yml
src/MyToDo/: main.py  utils.py
tests/: test_main.py
